# lbac

./: CMakeLists.txt  Doxyfile  README.md
src/: cradle.cpp  cradle.hpp  main.cpp
